fix modal visibility

--- a/app/blocks/develop/modal/modal.scss
+++ b/app/blocks/develop/modal/modal.scss
@@ -14,6 +14,7 @@
   transition-property: opacity;
 
   &--invisible {
+    @include visually-hidden();
     opacity: 0;
   }
 
